# PyVLC

./: LICENSE  README.md  pyproject.toml
src/: pyproject.toml
src/PyVLC/: __init__.py  pyvlc.py
