[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyVLC"
version = "0.0.1"
authors = [
  { name="Harshit Bhardwaj", email="htg4920@gmail.com" },
]
description = "A python package that utilizes telnetlib3 and asyncio to communicate with VLC Media Player"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DoofenCorp/PyVLC/"
"Bug Tracker" = "https://github.com/DoofenCorp/PyVLC/issues"